--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <div id="app">
-
-    <!-- ================= LOGIN ================= -->
+    <!-- LOGIN -->
     <div id="login" class="auth">
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
@@ -19,7 +18,7 @@
       </div>
     </div>
 
-    <!-- ================= MAIN APP ================= -->
+    <!-- MAIN -->
     <div id="main" style="display:none">
       <nav class="nav">
         <a data-view="home" class="active">Dashboard</a>
@@ -32,9 +31,8 @@
 
       <div class="container">
 
-        <!-- ============ DASHBOARD / HOME ============ -->
+        <!-- DASHBOARD -->
         <section id="home">
-          <!-- KPIs -->
           <div class="section">
             <h2>Overview</h2>
             <div class="kpis">
@@ -46,79 +44,88 @@
             </div>
           </div>
 
-          <!-- Total Stock & Ad Spend by Country (rendered by app.js) -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table id="stockByCountryTbl" class="table"><!-- app.js renders thead/tbody/tfoot --></table>
+            <table class="table">
+              <thead><tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend</th></tr></thead>
+              <tbody id="stockByCountryBody"></tbody>
+              <tfoot><tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0</th></tr></tfoot>
+            </table>
           </div>
 
-          <!-- Weekly Delivered grid (Mon–Sun x Countries) -->
           <div class="section">
             <h2>Weekly Delivered (Mon → Sun)</h2>
-            <div class="card row gap">
-              <button id="wdSave" class="btn">Save</button>
-              <button id="wdReset" class="btn outline">Reset</button>
+            <div class="card">
+              <div class="row wrap">
+                <button id="weeklyPrev" class="btn outline">◀ Prev</button>
+                <div id="weeklyRange" class="badge">Week:</div>
+                <button id="weeklyNext" class="btn outline">Next ▶</button>
+                <button id="weeklySave" class="btn">Save</button>
+                <button id="weeklyReset" class="btn danger outline">Reset</button>
+              </div>
             </div>
-            <div class="table-scroll">
-              <table id="weeklyGrid" class="table compact"><!-- filled by app.js --></table>
-            </div>
+            <table id="weeklyTable" class="table compact">
+              <thead id="weeklyHead"></thead>
+              <tbody id="weeklyBody"></tbody>
+              <tfoot>
+                <tr class="totals"><th>Totals</th>
+                  <th id="wMonT">0</th><th id="wTueT">0</th><th id="wWedT">0</th>
+                  <th id="wThuT">0</th><th id="wFriT">0</th><th id="wSatT">0</th><th id="wSunT">0</th>
+                  <th id="wAllT">0</th>
+                </tr>
+              </tfoot>
+            </table>
           </div>
 
-          <!-- Daily Advertising Spend (replace existing) -->
           <div class="section">
             <h2>Daily Advertising Spend</h2>
-            <div class="card row wrap">
-              <select id="adPlatform" class="input">
-                <option value="facebook">Facebook</option>
-                <option value="tiktok">TikTok</option>
-                <option value="google">Google</option>
-              </select>
-              <select id="adProduct" class="input"></select>
-              <select id="adCountry" class="input"></select>
-              <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-              <button id="adAdd" class="btn">Save/Replace</button>
+            <div class="card">
+              <div class="row wrap">
+                <select id="adPlatform" class="input">
+                  <option value="facebook">Facebook</option>
+                  <option value="tiktok">TikTok</option>
+                  <option value="google">Google</option>
+                </select>
+                <select id="adProduct" class="input"></select>
+                <select id="adCountry" class="input"></select>
+                <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
+                <button id="adSave" class="btn">Save / Replace</button>
+              </div>
             </div>
-            <small>Saving again for the same <b>product + platform + country</b> replaces the previous value.</small>
           </div>
 
-          <!-- Stock Movement -->
           <div class="section">
             <h2>Stock Movement</h2>
-            <div class="card row wrap">
-              <select id="mvFrom" class="input"></select>
-              <span>→</span>
-              <select id="mvTo" class="input"></select>
-              <select id="mvProduct" class="input"></select>
-              <input id="mvQty" type="number" class="input" placeholder="Qty" min="0"/>
-              <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
-              <button id="mvAdd" class="btn">Add Movement</button>
+            <div class="card">
+              <div class="row wrap">
+                <select id="mvFrom" class="input"></select>
+                <span>→</span>
+                <select id="mvTo" class="input"></select>
+                <select id="mvProduct" class="input"></select>
+                <input id="mvQty" type="number" class="input" placeholder="Qty" min="0"/>
+                <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
+                <button id="mvAdd" class="btn">Add Movement</button>
+              </div>
+              <small>Mark as Arrived to update stock destination (+) and origin (−).</small>
             </div>
-            <small>When marked as <b>Arrived</b>, destination stock increases and origin stock decreases.</small>
           </div>
 
-          <!-- Transit China → Kenya -->
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
             <table class="table">
-              <thead><tr>
-                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-              </tr></thead>
-              <tbody id="shipCKBody"><!-- rows --></tbody>
+              <thead><tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
+              <tbody id="shipCKBody"></tbody>
             </table>
           </div>
 
-          <!-- Transit Inter-country -->
           <div class="section">
             <h2>Transit (Inter-country)</h2>
             <table class="table">
-              <thead><tr>
-                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-              </tr></thead>
-              <tbody id="shipICBody"><!-- rows --></tbody>
+              <thead><tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
+              <tbody id="shipICBody"></tbody>
             </table>
           </div>
 
-          <!-- Profit by Country -->
           <div class="section">
             <h2>Profit by Country</h2>
             <div class="row wrap">
@@ -127,60 +134,63 @@
               <input id="pcEnd" type="date" class="input"/>
               <button id="pcRun" class="btn">Run</button>
             </div>
-            <table id="profitCountryTable" class="table">
-              <thead><tr>
-                <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
-              </tr></thead>
-              <tbody><!-- filled by app.js --></tbody>
+            <table class="table">
+              <thead><tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
+              <tbody id="profitCountryBody"></tbody>
+              <tfoot><tr class="totals"><th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th></tr></tfoot>
             </table>
           </div>
 
-          <!-- To-Do -->
           <div class="section">
             <h2>To-Do</h2>
-            <div class="row">
-              <input id="todoText" class="input" placeholder="Task"/>
-              <button id="todoAdd" class="btn">Add</button>
-            </div>
+            <div class="row"><input id="todoText" class="input" placeholder="Task"/><button id="todoAdd" class="btn">Add</button></div>
             <div id="todoList" class="todo-list"></div>
           </div>
 
-          <!-- Weekly To-Do -->
           <div class="section">
             <h2>Weekly To-Do</h2>
-            <div id="weeklyWrap" class="weeks"><!-- 7 cards injected --></div>
+            <div id="weeklyWrap" class="weeks"></div>
+          </div>
+
+          <div class="section">
+            <h2>Lifetime Product Performance</h2>
+            <div class="row wrap">
+              <select id="lpProduct" class="input"><option value="">All products</option></select>
+              <input id="lpStart" type="date" class="input"/>
+              <input id="lpEnd" type="date" class="input"/>
+              <button id="lpRun" class="btn">Run</button>
+            </div>
+            <table class="table">
+              <thead><tr><th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
+              <tbody id="lifetimeBody"></tbody>
+              <tfoot><tr class="totals"><th colspan="2">Totals</th><th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th></tr></tfoot>
+            </table>
           </div>
         </section>
 
-        <!-- ============ PRODUCTS ============ -->
+        <!-- PRODUCTS -->
         <section id="products" style="display:none">
           <h2>Products</h2>
-
           <div class="card">
             <div class="h">Add Product</div>
             <div class="row wrap">
               <input id="pName" class="input" placeholder="Name"/>
               <input id="pSku" class="input" placeholder="SKU"/>
-              <input id="pCost" type="number" class="input" placeholder="Cost from China (USD)" min="0" step="0.01"/>
-              <input id="pShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" min="0" step="0.01"/>
-              <input id="pMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" min="0" step="0.01"/>
+              <input id="pCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01"/>
+              <input id="pShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" step="0.01"/>
+              <input id="pMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" step="0.01"/>
               <button id="pAdd" class="btn">Add</button>
             </div>
           </div>
-
           <table id="productsTable" class="table">
             <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
-            <tbody><!-- rows injected --></tbody>
+            <tbody></tbody>
           </table>
-
-          <small>Click <b>Open</b> to go to that product’s page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
         </section>
 
-        <!-- ============ PERFORMANCE ============ -->
+        <!-- PERFORMANCE -->
         <section id="performance" style="display:none">
           <h2>Performance</h2>
-
-          <!-- Top Delivered Products -->
           <div class="card">
             <div class="h">Top Delivered Products</div>
             <div class="row wrap">
@@ -195,14 +205,11 @@
               <button id="pfRun" class="btn">Run</button>
             </div>
             <table id="pfTable" class="table">
-              <thead><tr>
-                <th>Product</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th>
-              </tr></thead>
-              <tbody><!-- rows injected --></tbody>
+              <thead><tr><th>Product</th><th>Country</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th></tr></thead>
+              <tbody></tbody>
             </table>
           </div>
 
-          <!-- Remittance Report -->
           <div class="card">
             <div class="h">Remittance Report</div>
             <div class="row wrap">
@@ -217,48 +224,35 @@
               <input id="rExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
               <button id="rAdd" class="btn">Add</button>
             </div>
-            <div id="rMsg" class="muted"></div>
           </div>
         </section>
 
-        <!-- ============ FINANCE ============ -->
+        <!-- FINANCE -->
         <section id="finance" style="display:none">
           <h2>Finance</h2>
-
           <div class="card big-balance">
             <div class="h">Running Balance (All-time)</div>
-            <div id="feRunning" class="balance">0.00 USD</div>
+            <div id="runBalance" class="balance">0.00 USD</div>
           </div>
 
-          <!-- Manage Categories -->
           <div class="card">
             <div class="h">Categories</div>
             <div class="row wrap">
-              <select id="fcType" class="input">
-                <option value="debit">Debit</option>
-                <option value="credit">Credit</option>
-              </select>
+              <select id="fcType" class="input"><option value="debit">Debit</option><option value="credit">Credit</option></select>
               <input id="fcName" class="input" placeholder="Category name"/>
               <button id="fcAdd" class="btn">Add Category</button>
             </div>
             <div class="row cats">
-              <div>
-                <h4>Debits</h4>
-                <div id="fcDebitList" class="chips"></div>
-              </div>
-              <div>
-                <h4>Credits</h4>
-                <div id="fcCreditList" class="chips"></div>
-              </div>
+              <div><h4>Debits</h4><div id="fcDebits" class="chips deletable"></div></div>
+              <div><h4>Credits</h4><div id="fcCredits" class="chips deletable"></div></div>
             </div>
           </div>
 
-          <!-- Entries + Period Filter -->
           <div class="card">
             <div class="h">Entries</div>
             <div class="row wrap">
               <input id="feDate" type="date" class="input"/>
-              <select id="feCat" class="input"><option value="" disabled selected>Select category</option></select>
+              <select id="feCat" class="input"></select>
               <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
               <button id="feAdd" class="btn">Add Entry</button>
@@ -268,35 +262,30 @@
               <input id="fes" type="date" class="input"/>
               <input id="fee" type="date" class="input"/>
               <button id="feRun" class="btn outline">Run</button>
-              <div id="feBalance" class="badge">Balance for period: —</div>
+              <div id="feBalance" class="badge">Period Balance: —</div>
             </div>
 
             <table id="feTable" class="table">
               <thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th><th></th></tr></thead>
-              <tbody><!-- rows injected --></tbody>
+              <tbody></tbody>
             </table>
           </div>
         </section>
 
-        <!-- ============ SETTINGS ============ -->
+        <!-- SETTINGS -->
         <section id="settings" style="display:none">
           <h2>Settings</h2>
 
-          <!-- Countries add/delete -->
           <div class="card">
             <div class="h">Countries</div>
-            <div class="row">
-              <input id="cty" class="input" placeholder="Add country"/>
-              <button id="ctyAdd" class="btn">Add</button>
-            </div>
+            <div class="row"><input id="cty" class="input" placeholder="Add country"/><button id="ctyAdd" class="btn">Add</button></div>
             <div id="ctyList" class="chips deletable"></div>
           </div>
 
-          <!-- Edit Product Info -->
           <div class="card">
             <div class="h">Edit Product Info</div>
             <div class="row wrap">
-              <select id="editProdSel" class="input"><option value="">Select product…</option></select>
+              <select id="epSelect" class="input"><option value="">Select product…</option></select>
               <input id="epName" class="input" placeholder="Product name"/>
               <input id="epSku" class="input" placeholder="SKU"/>
               <input id="epCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01"/>
@@ -306,21 +295,20 @@
             </div>
           </div>
 
-          <!-- Manual Save / Restore -->
           <div class="card">
             <div class="h">Manual Save &amp; Restore</div>
-            <div class="row">
-              <button id="ssSave" class="btn">Save current system data</button>
-            </div>
-            <div id="ssList" class="list"><!-- snapshot rows with Push/Delete --></div>
+            <div class="row"><input id="snapName" class="input" placeholder="Name this snapshot"/><button id="snapSave" class="btn">Save current system data</button></div>
+            <table class="table">
+              <thead><tr><th>Name</th><th>File</th><th>Actions</th></tr></thead>
+              <tbody id="snapList"></tbody>
+            </table>
           </div>
         </section>
 
-      </div><!-- /container -->
-    </div><!-- /main -->
-  </div><!-- /app -->
+      </div>
+    </div>
+  </div>
 
-  <!-- shared app script -->
   <script src="/public/app.js"></script>
 </body>
 </html>
